@@ -1,0 +1,6 @@
+
+from zope.interface import Interface
+
+class ITDHForm(Interface):
+    """Generic interface for all customised forms used within this product."""
+
